# irsl_universal_robot

./: .gitmodules  README.md  exec.sh  run.sh  run_sim.sh
docker/: Dockerfile  build.sh  docker-compose-linux-gpu2.yaml  docker-compose-linux2.yaml  docker-compose-win2.yaml
rtlinux/: README.md
rtlinux/4.19/: 4.18.0-25.26_amd64-config.flavour.generic  memo.txt  success.config
rtlinux/5.10/: 5.11.0-44.48_amd64-config.flavour.generic  memo.txt  success.config
rtlinux/5.15/: amd64-config.flavour.generic  memo.txt  success.config
rtlinux/5.4/: 5.4.0-152.169_amd64-config.flavour.generic  memo.txt  success.config
rtlinux/6.1/: 6.2.0-23.23_amd64-config.flavour.generic  memo.txt  success.config
sample_env/: ReadMe.md  add_red_sphere.yaml  red_sphere.body  run_sample_env.sh  sample_motion.ipynb
ur5e_body/: ur5e.urdf  ur5e_robot.body
ur5e_body/resource/: base.scen  shoulder.scen  wrist2.scen  wrist3.scen
ur5e_robot/: CMakeLists.txt  package.xml  ur5e_robot.body
ur5e_robot/launch/: depot_ros_world.yaml  setup_cnoid.py
ur5e_robot/model/: builder_simple_gripper.py  simple_gripper.body  ur5e_model.py  ur5e_robot.body  ur5e_robotinterface.yaml
ur5e_robot/model/resource/: base_link_inertia_0_vis.scen  forearm.scen  wrist_1_link_0_vis.scen
ur5e_robot/resource/: forearm_link_0_vis.scen  upperarm.scen  wrist1.scen  wrist_3_link_0_vis.scen
